add support link to header

--- a/public/index.html
+++ b/public/index.html
@@ -185,6 +185,8 @@
                             class="text-base font-bold text-slate-700 hover:text-brand-600 transition-colors no-underline">Features</a>
                         <a href="pricing.html"
                             class="text-base font-bold text-slate-700 hover:text-brand-600 transition-colors no-underline">Pricing</a>
+                        <a href="support.html"
+                            class="text-base font-bold text-slate-700 hover:text-brand-600 transition-colors no-underline">Support</a>
                         <a href="mailto:hello@autolister.app"
                             class="text-base font-bold text-slate-700 hover:text-brand-600 transition-colors no-underline">Contact</a>
                     </div>
