add video poster

--- a/public/index.html
+++ b/public/index.html
@@ -412,7 +412,7 @@
                             <!-- Video/Poster -->
                             <video
                                 class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105"
-                                src="/vid-promo.mp4" autoplay muted loop playsinline>
+                                poster="/video-poster.png" src="/vid-promo.mp4" autoplay muted loop playsinline>
                             </video>
 
                             <!-- Overlay Gradient (Subtle) -->
