implement astro migration #1

--- a/src/pages/cancel.html
+++ b/src/pages/cancel.html
@@ -343,14 +343,14 @@
       free plan!
     </div>
     <div class="cta-buttons">
-      <a href="/pricing.html" class="btn btn-primary">View Pricing</a>
+      <a href="/pricing" class="btn btn-primary">View Pricing</a>
       <a href="/" class="btn btn-secondary">Back to Home</a>
     </div>
     <footer>
       &copy; 2026 AutoLister AI · All rights reserved
       <br />
-      <a href="/privacy.html">Privacy Policy</a> · <a href="/terms.html">Terms of Service</a> · <a
-        href="mailto:support@autolister.ai">Support</a>
+      <a href="/privacy">Privacy Policy</a> · <a href="/terms">Terms of Service</a> · <a
+        href="mailto:support@autolister.app">Support</a>
     </footer>
   </div>
 
@@ -400,7 +400,7 @@
         class="btn btn-primary">
         Install Extension
       </a>
-      <a href="/pricing.html" class="btn btn-secondary">
+      <a href="/pricing" class="btn btn-secondary">
         Compare All Plans
       </a>
     </div>
@@ -408,8 +408,8 @@
     <footer>
       &copy; 2026 AutoLister AI · All rights reserved
       <br />
-      <a href="/privacy.html">Privacy Policy</a> · <a href="/terms.html">Terms of Service</a> · <a
-        href="mailto:support@autolister.ai">Support</a>
+      <a href="/privacy">Privacy Policy</a> · <a href="/terms">Terms of Service</a> · <a
+        href="mailto:support@autolister.app">Support</a>
     </footer>
   </div>
 
