--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -295,14 +295,14 @@
       This page is only accessible after a successful payment. If you think this is an error, please contact support.
     </div>
     <div class="cta-buttons">
-      <a href="/pricing.html" class="btn btn-primary">View Pricing</a>
+      <a href="/pricing" class="btn btn-primary">View Pricing</a>
       <a href="/" class="btn btn-secondary">Back to Home</a>
     </div>
     <footer>
       &copy; 2026 AutoLister AI · All rights reserved
       <br />
-      <a href="/privacy.html">Privacy Policy</a> · <a href="/terms.html">Terms of Service</a> · <a
-        href="mailto:support@autolister.ai">Support</a>
+      <a href="/privacy">Privacy Policy</a> · <a href="/terms">Terms of Service</a> · <a
+        href="mailto:support@autolister.app">Support</a>
     </footer>
   </div>
 
@@ -344,8 +344,8 @@
     <footer>
       &copy; 2026 AutoLister AI · All rights reserved
       <br />
-      <a href="/privacy.html">Privacy Policy</a> · <a href="/terms.html">Terms of Service</a> · <a
-        href="mailto:support@autolister.ai">Support</a>
+      <a href="/privacy">Privacy Policy</a> · <a href="/terms">Terms of Service</a> · <a
+        href="mailto:support@autolister.app">Support</a>
     </footer>
   </div>
 
